--- a/package.json
+++ b/package.json
@@ -36,12 +36,16 @@
     "@babel/preset-typescript": "^7.8.3",
     "@types/node": "^13.5.0",
     "@types/react": "^16.9.19",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.0",
+    "react": "^16.12.0",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "react": "^16.12.0"
+    "webpack-cli": "^3.3.10"
   },
   "peerDependencies": {
     "react": "^16.12.0"
